fixing sizing and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ nav ul li a:hover{
 }
 #aboutparagraphsection{
   background-color: #5c80bc;
-  margin-top: 300px;
+  margin-top: 150px;
   margin-left: 50px;
   margin-right: 50px;
   color: white;
@@ -150,7 +150,7 @@ margin-right: 100px;
 text-align: center;
 }
 .slideshow {width:5px; height:300px;}
-.slideshow img{position:absolute; animation:fling-minislide 20s infinite; opacity:0; width: 60%; height: auto;}
+.slideshow img{position:absolute; animation:fling-minislide 20s infinite; opacity:0; width: 40%; height: auto;}
 
 @keyframes fling-minislide {25%{opacity:1;} 40%{opacity:0;}}
 .slideshow img:nth-child(4){animation-delay:0s;}
